timeline alignment fixes and section clean up

--- a/dec-2020-lightning-talks/main.css
+++ b/dec-2020-lightning-talks/main.css
@@ -13,11 +13,12 @@
   --secondary-color-dull: #f8f8f8;
   --grid-box-border: #214a0e;
   --timeline-line-color: #2c282d;
+  --container-width: 80vw;
 }
 
 /* utils */
 .container {
-  max-width: 80%;
+  max-width: var(--container-width);
   margin: auto;
   margin-top: 3vh;
 }
@@ -33,7 +34,7 @@ li {
 }
 
 section {
-  margin: 30px 0;
+  margin: 10vh 0;
 }
 
 .secondary-color-bright {
@@ -83,8 +84,6 @@ section {
   margin: auto;
   text-align: center;
 }
-
-
 
 body {
   background-color: var(--background);
@@ -232,10 +231,8 @@ body {
 }
 
 #grid {
-  padding-top: 50px;
   display: grid;
   max-width: 100vw;
-  margin-top: 20px;
   height: 70vh;
   grid-template-columns: repeat(26, calc(100vw / 26));
   grid-template-rows: repeat(13, calc(100vw / 26));
@@ -256,29 +253,34 @@ body {
 
 #timer-container {
   grid-column: 7;
-  grid-row: 2;
-  width: 55vw;
+  grid-row: 1;
+  width: 100%;
   height: 60vh;
+
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
 
-#timer-container .monospace-green {
-  background-color: black;
-  font-size: 2.5rem;
+.timer-text {
+  width: 60vw;
+  display: block;
+  font-size: 3rem;
   text-align: center;
+  margin: auto;
+  background-color: black;
   z-index: 3;
-  padding: 0.5rem 2.5rem;
-  margin-top: 0px;
-  margin-bottom: 0.7rem;
+}
+
+.timer-bottom {
+  width: 30vw;
 }
 
 #timer {
   background-color: black;
   color: var(--secondary-color-bright);
-  margin-top: 2.9rem;
   padding: 0.5rem 2rem;
   width: 50vw;
 
@@ -330,7 +332,7 @@ body {
 }
 #day2 {
   grid-column: 70;
-  grid-row: 35;
+  grid-row: 30;
 }
 #day3 {
   grid-column: 0;
@@ -347,26 +349,44 @@ body {
   grid-row: 95;
 }
 
+/*
+#schedule {
+  background-color: red;
+}
+*/
+
+#schedule-timeline-line-flex,
+#schedule-timeline-bobs {
+  margin: auto;
+  display: flex;
+  width: var(--container-width);
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+
 #schedule-timeline-line {
-  grid-column: 50;
-  grid-row: 1 / 110;
-  border: 1px solid var(--timeline-line-color);
+  border: 0.00001px solid var(--timeline-line-color);
   width: 0px;
   height: 110vh;
   z-index: -1;
+  margin: 0 40vw;
 }
 
+
+
 .schedule-timeline-bob {
-  width: 7vh;
-  height: 7vh;
+  width: 6.5vh;
+  height: 6.5vh;
   border-radius: 50%;
   z-index: 2;
   background-color: var(--background);
   border: 4px solid #2c282d;
   box-sizing: border-box;
   display: inline-block;
+  margin: 8vh 37.8vw;
 }
-
+/*
 #schedule-timeline-bob-1 {
   grid-column: 48;
   grid-row: 12;
@@ -387,6 +407,8 @@ body {
   grid-column: 48;
   grid-row: 95;
 }
+
+*/
 
 #speakers {
   display: grid;
